Fix white space on background when scrolling

--- a/styles.css
+++ b/styles.css
@@ -2,6 +2,10 @@ body, html {
 	height: 100%;
 }
 
+.background {
+   transform: translate3d(0,0,0);  
+} 
+
 #portfolio {
 	background: url("brick_background.jpg") no-repeat center center fixed;
 	background-size: cover;
